--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <title>Súmate al Reciclaje</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Sarai Aguilar">
+    <meta name="description" content="Introducción al reciclaje">
+    <meta name="keywords" content="Informativo">
+    <meta name="keywords" content="Reciclaje">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
@@ -14,7 +19,6 @@
             <div class="search-bar">
                 <input type="text" placeholder="Buscar...">
             </div>
-            
             <!-- Barra de navegación -->
             <nav>
                 <ul>
@@ -102,6 +106,5 @@
             </ul>
         </div>
     </footer>
-    
 </body>
 </html>
